# Simulation

./: README.txt  setup_sim.sh
models/ampoule/: model.config  model.sdf
models/beachbots/: model.config  model.sdf
models/beachbots/materials/scripts/: beachbots.material
models/beachbots/meshes/: table.dae  table_collision.dae
models/clap_jaune/: model.config  model.sdf
models/clap_jaune/meshes/: EJ_Clap_Jaune.STEP  clap.dae
models/clap_vert/: model.config  model.sdf
models/gobelet/: model.sdf
models/gobelet/meshes/: EJ_Gobelet.STEP
models/piedjaune/: model.config  model.sdf
models/piedvert/: model.config  model.sdf
models/popcorn/: model.config  model.sdf
models/popcornx5/: model.config  model.sdf
models/robomovies/: model.sdf
models/robomovies/materials/scripts/: robomovies.material
models/rosebot/: model.sdf
models/rosebot/meshes/: assemblage.dae  base.dae  base.step
plugins/: .cproject  .gitignore  .project  rosebot_control.cc  setup_build.sh
plugins/src/: CMakeLists.txt
rosebot_gazebo/: CMakeLists.txt  package.xml  setup.py  simulation_launch.sh  worlds
rosebot_gazebo/launch/: beachbots.launch  caracteristiques.yaml  robomovies.launch  robomovies_vide.launch  simulation.launch
rosebot_gazebo/scripts/: carte_commande.py
rosebot_gazebo/src/: gazebo_ros_diff_drive.cpp  gazebo_ros_diff_drive.h  gazebo_ros_utils.cpp  gazebo_ros_utils.h  wheel_torque.cpp
rosebot_gazebo/worlds/: robomovies.world
worlds/: beachbots_vide.world  robomovies.world  robomovies_vide.world
